# DetectionHSL

./: .gitignore  .gitmodules  BUILDING.md  Default.cmd  DetectionHSL.ps1  Install_to_programfiles.bat  Partie1.bat  Partie2.bat  Partie3.bat  Partie4.cmd  Partie5.cmd  README.md  Readme.md  StarHSL.cmd  Start_HSL.cmd  Start_MiniHSL.cmd  Start_Repair.cmd  Updater_Start.bat  config.json  config.yaml  downloader.ps1  downloaderdl.ps1  gui.ps1  hslconf.json  hslmanager.ps1  programfiles.ps1  readme.txt  script détection.ps1  script_detection.ps1  setupshortcuts.ps1  shortcuts.bat  start.bat  test .ps1  update.bat  updater.json  updater.ps1  updater1.ps1
A lire/: Readme.md  Remerciments.txt
Resultats/Partie1/: Appbackground.txt  Applications.txt  Applicationstore.txt  EventLog.txt  Process.txt
Resultats/Partie2/: Infopc.txt  Partitons.txt
Resultats/Partie3/: Checkhealth.txt  sfc.txt  (+2 more)
Scripts/: Core.psm1  DetectionHSL.ps1  DetectionHSL_Manuel.ps1  HashRegen.ps1  Repair.ps1  Updater.ps1  Updater1.ps1  Windows Update.ps1  partie1.ps1  partie2.ps1  partie3.ps1  partie4.ps1  partie5.ps1  prep.ps1
common/: checkmod.ps1  genmod.ps1  packmod.ps1
core/hslconfig/: Cargo.toml
core/hslconfig/src/: main.rs
core/hslconfig/src/lib/: jsonutils.rs  mod.rs  structs.rs  yamlutils.rs
devkit/: build.ps1  checkmod.ps1  genmod.ps1  packmod.ps1
docs/: README-en.md  README-fr.md
documentation/: modules.md
hdk/: hdk.psm1  setup.ps1
main/: detectionhsl.psm1
src/: index.js  package.json
tools/: build.ps1  installscanner.ps1  set_debug_env.sh
windows-8.1/: dhsl.ps1  start.cmd
(+82 files in other folders)
