[package]
name = "hslconfig"
version = "0.1.0"
authors = ["Woomy4680-exe <matzar1808@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
structopt = "0.3"
serde_json = "1.0"
console = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
hslshared = {path = "../shared"}
clap = "2.33.0"